fixed profile page spacing, signup/login form centering

--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -1,4 +1,4 @@
-.about {
+/* .about {
   display: block;
   align-items: center;
   justify-content: center;
@@ -8,9 +8,9 @@
   background-color: rgb(245, 245, 245, 0.5);
   text-align: center;
   padding: 30px;
-}
+} */
 
-.brick_background {
+/* .brick_background {
     background: url("whitebrick.jpg");
-    min-height: 1200px;
-  }
+    min-height: 1700px;
+  } */
